--- a/delivery/page/templates/order.html
+++ b/delivery/page/templates/order.html
@@ -1,2 +1,49 @@
 {% extends base.html %}
-{% %}
+{% block name %}주문 페이지{% endblock %}
+
+{% block content %}
+<div class="container">
+  <div class="py-5 text-center">
+    <img class="d-block mx-auto mb-4" src="{% static 'images/Dreamary_Logo.png' %}" alt="" width="72" height="72">
+    <h2>주문 페이지</h2>
+    <p class="lead">원하는 메뉴를 주문할 수 있는 페이지입니다.<br>원하는 이름과 메뉴를 적어주세요.</p>
+  </div>
+  <div class="order-md-1">
+    <hr class="mb-4">
+    <form action="{% url 'create' %}" method="POST" enctype="multipart/form-data">
+      {% csrf_token %}
+      <div class="mb-3">
+        <label for="inputName">주문하시는 분의 이름을 적어주세요.</label>
+        <input type="text" class="form-control" name="name" id="inputName" required>
+        <small id="Name" class="form-text text-muted">50자 이내로 작성 바랍니다.</small>
+      </div>
+
+      <div class="mb-3">
+        <label for="inputAddress">메뉴를 받으실 주소를 적어주세요.</label>
+        <input type="text" class="form-control" id="store" name="address" required>
+        <small id="Address" class="form-text text-muted">예시) 서울특별시 강남구, 경기도 성남시 등</small>
+      </div>
+
+      <div class="mb-3">
+        <label for="inputStoreName">주문하는 가게 이름을 적어주세요.</label>
+        <input type="text" class="form-control" name="store"" id="inputName" required>
+        <small id="Name" class="form-text text-muted">50자 이내로 작성 바랍니다.</small>
+      </div>
+
+      <div class="mb-3">
+        <label for="inputMenu">메뉴 이름을 적어주세요.</label>
+        <input type="text" class="form-control" id="store" name="menu" required>
+        <small id="Address" class="form-text text-muted">예시) 서울특별시 강남구, 경기도 성남시 등</small>
+      </div>
+
+      <div class="mb-3">
+        <label for="inputDescription">당신을 소개해 주세요.</label>
+        <textarea class="form-control" name="description" id="inputDescription" cols="40" rows="10" required></textarea>
+        <small id="intoduce" class="form-text text-muted">고객님들께 전하고 싶은 말을 적어주세요.</small>
+      </div>
+      <hr class="mb-4">
+      <button class="btn btn-secondary btn-lg btn-block" type="submit">주문 완료하기</button>
+    </form>
+  </div>
+</div>
+{% endblock %}
