--- a/delivery/page/templates/order.html
+++ b/delivery/page/templates/order.html
@@ -20,26 +20,26 @@
 
       <div class="mb-3">
         <label for="inputAddress">메뉴를 받으실 주소를 적어주세요.</label>
-        <input type="text" class="form-control" id="store" name="address" required>
+        <input type="text" class="form-control" id="address" name="inputAddress" required>
         <small id="Address" class="form-text text-muted">예시) 서울특별시 강남구, 경기도 성남시 등</small>
       </div>
 
       <div class="mb-3">
         <label for="inputStoreName">주문하는 가게 이름을 적어주세요.</label>
-        <input type="text" class="form-control" name="store"" id="inputName" required>
+        <input type="text" class="form-control" name="store"" id="inputStoreName" required>
         <small id="Name" class="form-text text-muted">50자 이내로 작성 바랍니다.</small>
       </div>
 
       <div class="mb-3">
         <label for="inputMenu">메뉴 이름을 적어주세요.</label>
-        <input type="text" class="form-control" id="store" name="menu" required>
-        <small id="Address" class="form-text text-muted">예시) 서울특별시 강남구, 경기도 성남시 등</small>
+        <input type="text" class="form-control" id="menu" name="inputMenu" required>
+        <small id="Address" class="form-text text-muted">50자 이내로 작성 바랍니다.</small>
       </div>
 
       <div class="mb-3">
-        <label for="inputDescription">당신을 소개해 주세요.</label>
-        <textarea class="form-control" name="description" id="inputDescription" cols="40" rows="10" required></textarea>
-        <small id="intoduce" class="form-text text-muted">고객님들께 전하고 싶은 말을 적어주세요.</small>
+        <label for="inputOption">추가 사항을 적어주세요.</label>
+        <textarea class="form-control" name="option" id="inputOption" cols="40" rows="10" required></textarea>
+        <small id="intoduce" class="form-text text-muted">가게 사장님께 전하고 싶은 말을 적어주세요.</small>
       </div>
       <hr class="mb-4">
       <button class="btn btn-secondary btn-lg btn-block" type="submit">주문 완료하기</button>
