--- a/delivery/page/templates/change.html
+++ b/delivery/page/templates/change.html
@@ -1,8 +1,9 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}{% endblock %}
-{% block link %}{% endblock %}
+{% block title %}주문 내역 수정{% endblock %}
+{% block link %}{% static 'css/change.css' %}{% endblock %}
+
 {% block content %}
 
 {% endblock %}
