--- a/delivery/page/templates/base.html
+++ b/delivery/page/templates/base.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
   <meta name="generator" content="Jekyll v4.1.1">
-  <title>배달의 민족</title>
+  <title>{% block title%}{%endblock%}</title>
 
   <link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/album/">
 
