--- a/delivery/page/templates/order.html
+++ b/delivery/page/templates/order.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block name %}주문 페이지{% endblock %}
+{% block name %}배달의 민족 - Order Page{% endblock %}
 
 {% block content %}
 <div class="container">
