--- a/delivery/page/templates/change.html
+++ b/delivery/page/templates/change.html
@@ -4,6 +4,45 @@
 {% block title %}주문 내역 수정{% endblock %}
 {% block link %}{% static 'css/change.css' %}{% endblock %}
 
-{% block content %}
+{% block name %}배달의 민족 - 주문 수정 페이지{% endblock %}
 
+
+{% block content %}
+<div class="container">
+  <div class="py-5 text-center">
+    <h2>주문 변경 페이지</h2>
+    <p class="lead">원하는 메뉴를 변경할 수 있는 페이지입니다.<br>원하는 이름과 메뉴를 적어주세요.</p>
+  </div>
+  <div class="order-md-1">
+    <hr class="mb-4">
+    <form action="" method="POST" enctype="multipart/form-data">
+      {% csrf_token %}
+      <div class="mb-3">
+        <label for="inputAddress">메뉴를 받으실 주소를 적어주세요.</label>
+        <input type="text" class="form-control" id="address" name="inputAddress" value="{{ post.address }}" required>
+        <small id="Address" class="form-text text-muted">예시) 서울특별시 강남구, 경기도 성남시 등</small>
+      </div>
+
+      <div class="mb-3">
+        <label for="inputStoreName">가게 이름을 적어주세요.</label>
+        <input type="text" class="form-control" name="store"" id="inputStoreName" value="{{ post.store }}" required>
+        <small id="Name" class="form-text text-muted">50자 이내로 작성 바랍니다.</small>
+      </div>
+
+      <div class="mb-3">
+        <label for="inputMenu">메뉴 이름을 적어주세요.</label>
+        <input type="text" class="form-control" id="menu" name="inputMenu" value="{{ post.menu }}" required>
+        <small id="Address" class="form-text text-muted">50자 이내로 작성 바랍니다.</small>
+      </div>
+
+      <div class="mb-3">
+        <label for="inputOption">추가 변경 사항을 적어주세요.</label>
+        <textarea class="form-control" name="option" id="inputOption" cols="40" rows="10" required>{{ post.address }}</textarea>
+        <small id="intoduce" class="form-text text-muted">가게 사장님께 전하고 싶은 말을 적어주세요.</small>
+      </div>
+      <hr class="mb-4">
+      <button class="btn btn-secondary btn-lg btn-block" type="submit">주문 변경 완료하기</button>
+    </form>
+  </div>
+</div>
 {% endblock %}
